added functionality and display of search results
added useState, a new component to contain the map function to display all of the definitions, parts of speech, and example sentences. Added basic css to style results and page.

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,17 @@ footer {
   text-align: center;
   margin: 1%;
 }
+
+h3 {
+  font-size: medium;
+}
+
+.exampleSentence {
+  font-style: italic;
+  display: block;
+  margin: 1.5%;
+}
+
+.container {
+  margin: 1.5%;
+}
